--- a/uac-common/pom.xml
+++ b/uac-common/pom.xml
@@ -18,6 +18,12 @@
             <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.10</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
