--- a/uac-service/src/main/resources/application-test.properties
+++ b/uac-service/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # data source
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
