--- a/uac-service/src/main/resources/application.properties
+++ b/uac-service/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.profiles.active=test
 debug=true
+
+
+spring.http.encoding.enabled=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.force=true
+
+spring.jackson.serialization.indent-output=true
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
