--- a/uac-service/src/main/resources/application.properties
+++ b/uac-service/src/main/resources/application.properties
@@ -9,3 +9,20 @@ spring.http.encoding.force=true
 spring.jackson.serialization.indent-output=true
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
+
+# mybatis
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.check-config-location=true
+
+# ehcache
+spring.cache.ehcache.config=classpath:ehcache.xml
+
+# JWT
+jwt.auth.expires-in=360000
+jwt.auth.issuer=toptop
+
+# SMS
+sms.juhe.enabled=true
+sms.juhe.app-key=123456
+
+
