--- a/uac-service/pom.xml
+++ b/uac-service/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.1</version>
+            <version>1.3.2</version>
         </dependency>
 
         <dependency>
@@ -54,9 +54,15 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zhenhui.common</groupId>
+            <artifactId>juhe-sms-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.7</version>
+            <version>1.1.9</version>
         </dependency>
 
         <dependency>
@@ -93,6 +99,17 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-jackson</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
     </dependencies>
 
