--- a/uac-service/src/main/resources/application.properties
+++ b/uac-service/src/main/resources/application.properties
@@ -18,8 +18,9 @@ mybatis.check-config-location=true
 spring.cache.ehcache.config=classpath:ehcache.xml
 
 # JWT
-jwt.auth.expires-in=360000
 jwt.auth.issuer=toptop
+jwt.auth.sign-key=y&hJAyHKhhSm@SU!ad1VuDVufRcPl&UD
+jwt.auth.expires-in=360000
 
 # SMS
 sms.juhe.enabled=true
